# boslam

./: .gitignore  README.md  camera.py  config.py  temp.py  utils.py
docker/: Dockerfile  Dockerfile.backup  container_init.sh  display_x11_debugged.cpp  install_dbow3.sh  install_opencv.sh  pangolin_setup_debugged.py  realsense.yaml  run.sh  usefull_commands.sh
docker/pydbow3/src/: CMakeLists.txt  MANIFEST.in  __init__.py  dbow3.cpp  setup.py
docker/pydbow3/src/lib/: container.h  np_opencv_converter.cpp
docker/pydbow3/src/test/: test_import.py
experiments/: ba_tracking.py  pnp_one_way_tracking.py  pnp_two_way_tracking.py  pnp_two_way_tracking_chessboard.py  pnp_two_way_tracking_with_dbow.py  temp.py  temp2.py
slam/: bow_db.py  covisibility_graph.py  local_mapping.py  loop_closing.py  main.py  nodes.py  optimizer.py  tracking.py
tests/: ba_test.py  g2opy_example.py  pyrdbow3_test.py  python_realsense_test.py  temp.py
unittests/: unittest_covisibility_graph.py  unittest_local_mapping.py  unittest_main.py  unittest_tracking.py
visualization/: slam_viewer.py
